[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-ws = "0.2"
actix-web-actors = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
dotenv = "0.15"
futures-util = "0.3"
jsonwebtoken = "8"
bcrypt = "0.13"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
env_logger = "0.9"
log = "0.4"